unpackaged/main/default/objects/Item_Based_Upload_Information__c/Item_Based_Upload_Information__c.object-meta.xml
<CustomObject>
    <label>Item Based Upload Information</label>
    <nameField>
        <label>Item Based Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Based Uploads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>