unpackaged/main/default/objects/Item_Based_Upload_Information__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Item Based Uploads</relationshipLabel>
    <relationshipName>Item_Based_Uploads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>