unpackaged/main/default/objects/Item_Based_Upload_Information__c/fields/FON_Total_Item_Based_Deposits__c.field-meta.xml
<CustomField>
    <fullName>FON_Total_Item_Based_Deposits__c</fullName>
    <inlineHelpText>populated from Acuity file</inlineHelpText>
    <label>Total Item Based Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>