unpackaged/main/default/objects/Item_Based_Upload_Information__c/fields/FON_Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>FON_Total_Volume__c</fullName>
    <label>Total Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>