unpackaged/main/default/objects/Item_Based_Upload_Information__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Item Based Uploads (Parent)</relationshipLabel>
    <relationshipName>Item_Based_Uploads1</relationshipName>
    <type>Lookup</type>
</CustomField>