unpackaged/main/default/objects/Item_Based_Upload_Information__c/fields/Primary_R_T_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_R_T_Number__c</fullName>
    <formula>Account_Name__r.Primary_R_T_Number__c</formula>
    <inlineHelpText>Formula Field, populates the Primary R/T Number belonging to the Account populated in the lookup field</inlineHelpText>
    <label>Primary R/T Number</label>
    <type>Text</type>
</CustomField>