unpackaged/main/default/objects/Item_Based_Upload_Information__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1Q</fullName>
            </value>
            <value>
                <fullName>2Q</fullName>
            </value>
            <value>
                <fullName>3Q</fullName>
            </value>
            <value>
                <fullName>4Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>