unpackaged/main/default/objects/Item_Based_Upload_Information__c/fields/RTN__c.field-meta.xml
<CustomField>
    <fullName>RTN__c</fullName>
    <label>RTN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>