unpackaged/main/default/objects/Item_Based_Upload_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Parent__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Primary_R_T_Number__c</columns>
    <columns>NAME</columns>
    <columns>FON_Total_Volume__c</columns>
    <columns>Quarter__c</columns>
    <columns>Rate__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Report_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>4/21/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>